chganged footer vw to ensure to white space or left and right scrolling

--- a/styles.scss
+++ b/styles.scss
@@ -338,7 +338,6 @@ p{
         justify-content: center;
     }
     .footer-container {
-        max-width: 100vw;
         display: flex;
         justify-content: space-between;
         align-items: center;
